# qt-decorations

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  flake.nix  home-manager.nix  package.nix
nix/: homeModule.nix  package.nix
src/: CMakeLists.txt  QCatppuccinDecorations.cpp  QCatppuccinDecorations.h  QCatppuccinDecorations.json  QCatppuccinDecorationsPlugin.cpp  QCatppuccinDecorationsPlugin.h  bridge.h  lib.rs  plugin.cpp  plugin.json
